k8s/backend/manifests/greeting-backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-backend
  labels:
    app: greeting-backend
    app.kubernetes.io/name: greeting-backend
    app.kubernetes.io/part-of: greeting-app
spec:
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: greeting-backend
  type: ClusterIP
